fixed word wrap in comments

--- a/sites/all/themes/at_tf_admin/css/at_admin.css
+++ b/sites/all/themes/at_tf_admin/css/at_admin.css
@@ -3553,6 +3553,9 @@ table.grievance-timeline tr.pending {
 }
 
 .node-full .field-name-field-grievance-comments {
-  white-space: pre;
-  word-wrap: break-word;
+  white-space: pre-wrap;       /* Since CSS 2.1 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
